--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,4 @@ RewriteEngine On
 RewriteBase /
 
 # Error pages
-ErrorDocument 404 /404.html
-ErrorDocument 500 /500.html
+ErrorDocument 404 /index.php
